Pool improvements for use in cluster.